syntax = "proto3";

package account.api.account.v1;
import "errors/errors.proto";

option go_package = "gateway/api/account/v1;v1";
option java_multiple_files = true;
option java_package = "account.v1.errors";
option objc_class_prefix = "APIAccountErrors";

enum ErrorReason {
  option (errors.default_code) = 500;

  BAD_REQUEST = 0 [(errors.code) = 400];
  UNAUTHORIZED = 1 [(errors.code) = 401];
  FORBIDDEN = 2 [(errors.code) = 403];
  SERVICE_ERROR = 3 [(errors.code) = 500];

//  USER_NOT_FOUND = 0 [(errors.code) = 404];
//  CONTENT_MISSING = 1 [(errors.code) = 400];
}