syntax = "proto3";

package gateway.api.event.v1;

option go_package = "gateway/api/event/v1;v1";
option java_multiple_files = true;
option java_package = "api.event.v1";

service EventStream {
	rpc EventStream (stream EventStreamRequest) returns (stream EventStreamResponse){};
}

message EventStreamRequest {
	string token = 1;
	oneof event {
		OnlineRequest onlineRequest = 2;
		BeatHeartRequest beatHeartRequest = 3;
		OfflineRequest offlineRequest = 4;
	}
}

message EventStreamResponse {
	string token = 1;
	oneof event {
		OnlineResponse onlineResponse = 2;
		BeatHeartResponse beatHeartResponse = 3;
		OfflineResponse offlineResponse = 4;
	}
}

// ------------------------------
// 以下为客户端发起的request event

// 登录后上线request
message OnlineRequest {
	string token = 1;
}

// 心跳request
message BeatHeartRequest {
	string sessionId = 1;
}

// 下线request
message OfflineRequest {
	string token = 1;
	string sessionId = 2;
}

// ------------------------------
// 以下为服务端发起的request event

// 登录后上线response
message OnlineResponse {
	string sessionId = 1;
}


// 心跳response
message BeatHeartResponse {
	enum Flag {
		// 送达
		ACK = 0;
		// sessionId或服务失效, 需要发起online请求
		FIN = 1;
		// token失效, 需要重新登录
		RST = 2;
	}
	Flag flag = 1;
}

// 下线response
message OfflineResponse {
	string token = 1;
}