syntax = "proto3";

package account.api.account.v1;

option go_package = "gateway/internal/api/account/account/v1;v1";
option java_multiple_files = true;
option java_package = "api.account.v1";

service Account {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Register (RegisterRequest) returns (RegisterReply);
  rpc CheckLoginStat (CheckLoginStatRequest) returns (CheckLoginStatResponse);
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc UpdateAvatar (UpdateAvatarRequest) returns (UpdateAvatarReply);
}

message UpdateAvatarRequest {
  string token = 1;
  string avatar = 2;
}

message UpdateAvatarReply {
  string token = 1;
  string avatar = 2;
}

message GetUserInfoRequest {
  repeated string uuid = 1;
}

message GetUserInfoResponse {
  message UserInfo {
    string uuid = 1;
    string avatar = 2;
    string nickname = 3;
  }
  repeated UserInfo userinfo = 1;
}

message LoginRequest {
  // user account, like username, email, phone number
  string account = 1;
  // md5(password+"piggytalk")
  string password = 2;
}

message LoginReply {
  string token = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string nickname = 6;
  string uuid = 7;
}

message RegisterRequest {
  string username = 1;
  // same as login request
  string password = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string nickname = 6;
}

message RegisterReply {
  string token = 1;
  string uuid = 7;
}

message CheckLoginStatRequest {
  string token = 1;
}

message CheckLoginStatResponse {
  enum Device {
    WEB = 0;
    PHONE = 1;
  }
  // 校验通过, 返回原token, 失败返回空
  string token = 1;
  Device device = 2;
  string uuid = 3;
}