syntax = "proto3";

package message.api.message.v1;

option go_package = "message/api/message/v1;v1";
option java_multiple_files = true;
option java_package = "api.message.v1";

service Message {
  rpc CreateMessage (CreateMessageRequest) returns (CreateMessageReply);
  rpc SelectFriendRequest (SelectFriendRequestRequest) returns (SelectFriendRequestReply);
  rpc ListFriendRequest (ListFriendRequestRequest) returns (ListFriendRequestReply);
}

message CreateMessageRequest {}
message CreateMessageReply {}

message SelectFriendRequestRequest {
  string eventUuid = 1;
}
message SelectFriendRequestReply {
	string userAUuid = 1;
  string userBUuid = 2;
}

message ListFriendRequestRequest {
  string uuid = 1;
  // 从头查写0
  int64 startEventId = 2;
  int64 count = 3;
}

message ListFriendRequestReply {
  message AddFriendMessage {
    string eventUuid = 1;
    int64 eventId = 2;
    string ack = 3;
    string receiverUuid = 4;
    string senderUuid = 5;
    string type = 6;
  }
  repeated AddFriendMessage addFriendMessage = 1;
}